--- a/pages/7836.html
+++ b/pages/7836.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9042/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -479,10 +479,15 @@ margin-left: 0em;
 <div class='maruku_toc'>
 <ul>
 <li><a href='#definition'>Definition</a></li>
-<li><a href='#other_meanings'>Other meanings</a></li>
 <ul>
-<li><a href='#order_of_an_element_of_a_group'>Order of an element of a group</a></li>
-<li><a href='#of_a_group_scheme'>Of a group scheme</a></li>
+<li><a href='#OrderOfAGroup'>Order of a group</a></li>
+<li><a href='#OrderOfAnElementOfAGroup'>Order of an element of a group</a></li>
+<li><a href='#order_of_a_group_scheme'>Order of a group scheme</a></li>
+</ul>
+<li><a href='#properties'>Properties</a></li>
+<ul>
+<li><a href='#orders_of_cyclic_subgroups'>Orders of cyclic subgroups</a></li>
+<li><a href='#lagranges_theorem'>Lagrange’s theorem</a></li>
 </ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
@@ -491,24 +496,65 @@ margin-left: 0em;
 
 <h2 id="definition">Definition</h2>
 
+<h3 id="OrderOfAGroup">Order of a group</h3>
+
 <p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/discrete+group">discrete group</a>, its <strong>order</strong> is the <a class="existingWikiWord" href="/nlab/show/cardinality">cardinality</a> of the underlying <a class="existingWikiWord" href="/nlab/show/set">set</a>.</p>
 
-<p>Hence for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a>, its order is a <a class="existingWikiWord" href="/nlab/show/natural+number">natural number</a>, the number of its group elements.</p>
+<p>Hence for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a>, its order <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">|</mo><mi>G</mi><mo stretchy="false">|</mo><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding="application/x-tex">\vert G\vert \in \mathbb{N}</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/natural+number">natural number</a>, the number of its group elements.</p>
 
-<h2 id="other_meanings">Other meanings</h2>
+<h3 id="OrderOfAnElementOfAGroup">Order of an element of a group</h3>
 
-<h3 id="order_of_an_element_of_a_group">Order of an element of a group</h3>
-
-<p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/group">group</a> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi><mo>∈</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">g \in G</annotation></semantics></math> an <a class="existingWikiWord" href="/nlab/show/element">element</a>, the <strong>order</strong> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi></mrow><annotation encoding="application/x-tex">g</annotation></semantics></math> is the smallest <a class="existingWikiWord" href="/nlab/show/natural+number">natural number</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math> such that the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-fold group product of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi></mrow><annotation encoding="application/x-tex">g</annotation></semantics></math> with itself is the neutral element:</p>
+<p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/group">group</a> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi><mo>∈</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">g \in G</annotation></semantics></math> an <a class="existingWikiWord" href="/nlab/show/element">element</a>, the <strong>order</strong> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi></mrow><annotation encoding="application/x-tex">g</annotation></semantics></math> is the smallest <a class="existingWikiWord" href="/nlab/show/natural+number">natural number</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math> such that the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-fold group product of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi></mrow><annotation encoding="application/x-tex">g</annotation></semantics></math> with itself is the <a class="existingWikiWord" href="/nlab/show/neutral+element">neutral element</a>:</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>order</mi><mo stretchy="false">(</mo><mi>g</mi><mo stretchy="false">)</mo><mo>≔</mo><mi>min</mi><mo stretchy="false">{</mo><mi>n</mi><mo>∈</mo><mi>ℕ</mi><mo stretchy="false">|</mo><msup><mi>g</mi> <mi>n</mi></msup><mo>=</mo><mi>e</mi><mo stretchy="false">}</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
   order(g) \coloneqq min \{ n \in \mathbb{N} | g^n = e\}
   \,.
 
 </annotation></semantics></math></div>
-<h3 id="of_a_group_scheme">Of a group scheme</h3>
+<h3 id="order_of_a_group_scheme">Order of a group scheme</h3>
 
 <p>Sometimes the term ‘’order’‘ refers to the <a class="existingWikiWord" href="/nlab/show/height+of+a+group+scheme">height</a> of a (<a class="existingWikiWord" href="/nlab/show/group+scheme">group</a>) <a class="existingWikiWord" href="/nlab/show/scheme">scheme</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> over a <a class="existingWikiWord" href="/nlab/show/field">field</a> (of <a class="existingWikiWord" href="/nlab/show/characteristic">characteristic</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>) which is defined to be the dimension of the associated ring of functions <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>O</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">O(X)</annotation></semantics></math> as a <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi></mrow><annotation encoding="application/x-tex">k</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/vector+space">vector space</a>. Another term for this notion is ‘’rank’’. If this group scheme is moreover <a class="existingWikiWord" href="/nlab/show/p-divisible+group">p-divisible</a> - which means that is is in fact a codirected diagram of <a class="existingWikiWord" href="/nlab/show/group+scheme">group schemes</a> of order <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>p</mi> <mrow><mi>v</mi><mi>h</mi></mrow></msup></mrow><annotation encoding="application/x-tex">p^{v h}</annotation></semantics></math>; in this case <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>h</mi></mrow><annotation encoding="application/x-tex">h</annotation></semantics></math> is called the order or height of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math>.</p>
 
+<h2 id="properties">Properties</h2>
+
+<p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi><mo>∈</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">g \in G</annotation></semantics></math> an element, there is a close relation between</p>
+
+<ol>
+<li>
+<p>the order <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">|</mo><mi>G</mi><mo stretchy="false">|</mo></mrow><annotation encoding="application/x-tex">\vert G\vert</annotation></semantics></math> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> in the sense <a href="#OrderOfAGroup">above</a>;</p>
+</li>
+
+<li>
+<p>the order <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>order</mi><mo stretchy="false">(</mo><mi>g</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">order(g)</annotation></semantics></math> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi></mrow><annotation encoding="application/x-tex">g</annotation></semantics></math> the sense <a href="#OrderOfAnElementOfAGroup">above</a></p>
+</li>
+</ol>
+
+<h3 id="orders_of_cyclic_subgroups">Orders of cyclic subgroups</h3>
+
+<p>The element <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi></mrow><annotation encoding="application/x-tex">g</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/generators+and+relations">generates</a> a <a class="existingWikiWord" href="/nlab/show/cyclic+group">cyclic</a> <a class="existingWikiWord" href="/nlab/show/subgroup">subgroup</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>C</mi> <mi>g</mi></msub><mo>⊂</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">C_g \subset G</annotation></semantics></math>. Evidently, the order of the element <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi></mrow><annotation encoding="application/x-tex">g</annotation></semantics></math> equals the order <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">|</mo><msub><mi>C</mi> <mi>g</mi></msub><mo stretchy="false">|</mo></mrow><annotation encoding="application/x-tex">\vert C_g \vert</annotation></semantics></math> of this cyclic subgroup that it generates:</p>
+<div class="maruku-equation" id="eq:OrderOfElementIsOrderOfGeneratedCyclicGroup"><span class="maruku-eq-number">(1)</span><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>order</mi><mo stretchy="false">(</mo><mi>g</mi><mo stretchy="false">)</mo><mo>=</mo><mo stretchy="false">|</mo><msub><mi>C</mi> <mi>g</mi></msub><mo stretchy="false">|</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  
+  order(g) =\vert C_g\vert
+  \,.
+
+</annotation></semantics></math></div>
+<h3 id="lagranges_theorem">Lagrange’s theorem</h3>
+
+<p>By <a class="existingWikiWord" href="/nlab/show/Lagrange%27s+theorem">Lagrange's theorem</a>, if <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi><mo>⊂</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">H \subset G</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/subgroup">subgroup</a>, then the order <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">|</mo><mi>G</mi><mo stretchy="false">|</mo></mrow><annotation encoding="application/x-tex">\vert G\vert</annotation></semantics></math> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is givisible by the order <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">|</mo><mi>H</mi><mo stretchy="false">|</mo></mrow><annotation encoding="application/x-tex">\vert H\vert</annotation></semantics></math> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi></mrow><annotation encoding="application/x-tex">H</annotation></semantics></math>. The multiple is called the <a class="existingWikiWord" href="/nlab/show/index+of+a+subgroup">subgroup index</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><mi>G</mi><mo>:</mo><mi>H</mi><mo stretchy="false">]</mo><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding="application/x-tex">[G : H] \in \mathbb{N}</annotation></semantics></math>:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mo stretchy="false">|</mo><mi>G</mi><mo stretchy="false">|</mo></mrow><mspace width="thickmathspace"></mspace><mo>=</mo><mspace width="thickmathspace"></mspace><mo stretchy="false">[</mo><mi>G</mi><mo>:</mo><mi>H</mi><mo stretchy="false">]</mo><mspace width="thinmathspace"></mspace><mrow><mo stretchy="false">|</mo><mi>H</mi><mo stretchy="false">|</mo></mrow><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  {\vert G\vert}
+  \;=\;
+  [G : H] \, {\vert H\vert}
+  \,.
+
+</annotation></semantics></math></div>
+<p>Hence with <a class="maruku-eqref" href="#eq:OrderOfElementIsOrderOfGeneratedCyclicGroup">(1)</a> it follows that with <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi><mo>∈</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">g \in G</annotation></semantics></math> any element, the order of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi></mrow><annotation encoding="application/x-tex">g</annotation></semantics></math> divides the order of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mo stretchy="false">|</mo><mi>G</mi><mo stretchy="false">|</mo></mrow><mo stretchy="false">/</mo><mi>order</mi><mo stretchy="false">(</mo><mi>g</mi><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>=</mo><mspace width="thickmathspace"></mspace><mo stretchy="false">[</mo><mi>G</mi><mo>:</mo><msub><mi>C</mi> <mi>g</mi></msub><mo stretchy="false">]</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  {\vert G\vert}/ order(g)
+  \;=\;
+  [G : C_g]
+  \,.
+
+</annotation></semantics></math></div>
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
@@ -528,7 +574,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 25, 2018 at 04:53:49.
+  Last revised on September 25, 2018 at 05:07:46.
   See the <a href="https://ncatlab.org/nlab/history/order of a group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
