--- a/pages/1194.html
+++ b/pages/1194.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/271/#Item_26" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/271/#Item_27" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -909,7 +909,7 @@ margin-left: 0em;
 </annotation></semantics></math></div>
 <p>Here the horizontal bar indicates that we have written down a <em>rule</em>, the rule that the <a class="existingWikiWord" href="/nlab/show/judgement">judgement</a> on the bottom is valid whenever the judgements on the top are valid.</p>
 
-<p>What is an <a class="existingWikiWord" href="/nlab/show/identity+morphism">identity morphism</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi><mover><mo>→</mo><mrow><mi>f</mi><mo>=</mo><msub><mi>Id</mi> <mi>A</mi></msub></mrow></mover><mi>A</mi></mrow><annotation encoding="application/x-tex">A \stackrel{f = Id_A}{\to} A</annotation></semantics></math> in category theory is a term represeting the function <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>f</mi><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo><mo>=</mo><mi>x</mi></mrow><annotation encoding="application/x-tex">f(x) = x</annotation></semantics></math> in type theory, namely the variable <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi></mrow><annotation encoding="application/x-tex">x</annotation></semantics></math> itself regarded as a term: <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi></mrow><annotation encoding="application/x-tex">x</annotation></semantics></math> is a term of type <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math> whenever <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi></mrow><annotation encoding="application/x-tex">x</annotation></semantics></math> is a variable of type <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math>.</p>
+<p>What is an <a class="existingWikiWord" href="/nlab/show/identity+morphism">identity morphism</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi><mover><mo>→</mo><mrow><mi>f</mi><mo>=</mo><msub><mi>Id</mi> <mi>A</mi></msub></mrow></mover><mi>A</mi></mrow><annotation encoding="application/x-tex">A \stackrel{f = Id_A}{\to} A</annotation></semantics></math> in category theory is a term representing the function <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>f</mi><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo><mo>=</mo><mi>x</mi></mrow><annotation encoding="application/x-tex">f(x) = x</annotation></semantics></math> in type theory, namely the variable <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi></mrow><annotation encoding="application/x-tex">x</annotation></semantics></math> itself regarded as a term: <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi></mrow><annotation encoding="application/x-tex">x</annotation></semantics></math> is a term of type <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math> whenever <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi></mrow><annotation encoding="application/x-tex">x</annotation></semantics></math> is a variable of type <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math>.</p>
 
 <p>In symbols:</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mfrac><mrow></mrow><mrow><mi>x</mi><mo lspace="verythinmathspace">:</mo><mi>A</mi><mo>⊢</mo><mi>x</mi><mo lspace="verythinmathspace">:</mo><mi>A</mi></mrow></mfrac></mrow><annotation encoding="application/x-tex"> \frac {}{ x\colon A \vdash x\colon A } </annotation></semantics></math></div>
@@ -1384,7 +1384,7 @@ P(X\times Y)</annotation></semantics></math> interprets the adding of an unused 
 </li>
 
 <li>
-<p><span class="newWikiWord">bidirectional typechecking<a href="/nlab/new/bidirectional+typechecking">?</a></span></p>
+<p><a class="existingWikiWord" href="/nlab/show/bidirectional+typechecking">bidirectional typechecking</a></p>
 </li>
 </ul>
 </li>
@@ -1653,14 +1653,14 @@ P(X\times Y)</annotation></semantics></math> interprets the adding of an unused 
 
 <div class="revisedby">
   <p>
-  Last revised on September 22, 2018 at 05:39:33.
+  Last revised on September 25, 2018 at 05:05:25.
   See the <a href="https://ncatlab.org/nlab/history/type theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/type+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/type+theory/116" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(116 revisions)</span> | <a href="/nlab/show/diff/type+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/type+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/type+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/type+theory/117" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(117 revisions)</span> | <a href="/nlab/show/diff/type+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/type+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/type theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
