--- a/pages/19717.html
+++ b/pages/19717.html
@@ -336,7 +336,7 @@ margin-left: 0em;
 
 <p>[Sometimes a lens satisfying all three laws is said to be lawful. Sometimes it is said that a well-behaved lens satisfies (1) and (2) and a very well-behaved lens satisfies also (3).]</p>
 
-<p>In other words, a (lawful) lens for a fixed <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>V</mi></mrow><annotation encoding="application/x-tex">V</annotation></semantics></math> is an <a class="existingWikiWord" href="/nlab/show/algebra+over+a+monad">algebra</a> from the monad <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>V</mi> <mo>*</mo></msup><mo>⋅</mo><mi>Σ</mi></mrow><annotation encoding="application/x-tex">V^{\ast} \cdot \Sigma</annotation></semantics></math>:</p>
+<p>In other words, a (lawful) lens for a fixed <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>V</mi></mrow><annotation encoding="application/x-tex">V</annotation></semantics></math> is an <a class="existingWikiWord" href="/nlab/show/algebra+over+a+monad">algebra</a> from the monad <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>V</mi> <mo>*</mo></msup><mo>⋅</mo><mi>Σ</mi></mrow><annotation encoding="application/x-tex">V^{\ast} \cdot \Sigma</annotation></semantics></math> (the <a href="necessity+and+possibility#globally">possibility</a> operator):</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>C</mi><mo stretchy="false">/</mo><mi>V</mi><munderover><mo>⊥</mo><munder><mo>⟵</mo><mrow><msup><mi>V</mi> <mo>*</mo></msup></mrow></munder><mover><mo>⟶</mo><mi>Σ</mi></mover></munderover><mi>C</mi><mo>.</mo></mrow><annotation encoding="application/x-tex">
   C/V
   \underoverset
@@ -391,14 +391,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 25, 2018 at 04:42:59.
+  Last revised on September 25, 2018 at 08:35:55.
   See the <a href="https://ncatlab.org/nlab/history/lens (in computer science)" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/lens+%28in+computer+science%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/lens+%28in+computer+science%29/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/lens+%28in+computer+science%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/lens+%28in+computer+science%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/lens+%28in+computer+science%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/lens+%28in+computer+science%29/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/lens+%28in+computer+science%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/lens+%28in+computer+science%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/lens (in computer science)/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
