--- a/pages/7824.html
+++ b/pages/7824.html
@@ -671,7 +671,7 @@ X\mapsto X(k_s)
 <p>Discussion in the context of <a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a> includes</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Gregory+Moore">Gregory Moore</a>, <em>Arithmetic and Attractors</em> (<a href="https://arxiv.org/abs/hep-th/9807087">arXiv:hep-th/9807087</a>)</li>
+<li><a class="existingWikiWord" href="/nlab/show/Gregory+Moore">Gregory Moore</a>, <em>Arithmetic and Attractors</em> (<a href="https://arxiv.org/abs/hep-th/9807087">arXiv:hep-th/9807087</a>, abridged version in <a href="https://arxiv.org/abs/hep-th/9807056">arXiv:hep-th/9807056</a>)</li>
 </ul>
 <div class="property">category: <a class="category_link" href="/nlab/all_pages/Galois+theory">Galois theory</a></div></body></html>
 
@@ -679,14 +679,14 @@ X\mapsto X(k_s)
 
 <div class="revisedby">
   <p>
-  Last revised on September 25, 2018 at 08:28:23.
+  Last revised on September 25, 2018 at 10:12:27.
   See the <a href="https://ncatlab.org/nlab/history/absolute Galois group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/absolute+Galois+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/absolute+Galois+group/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/absolute+Galois+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/absolute+Galois+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/absolute+Galois+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/absolute+Galois+group/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/absolute+Galois+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/absolute+Galois+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/absolute Galois group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
