--- a/pages/8558.html
+++ b/pages/8558.html
@@ -321,7 +321,7 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>A <em>stratification</em> of a <a class="existingWikiWord" href="/nlab/show/set">set</a> or other object is some kind of decomposition into <em>strata</em> that are often <a class="existingWikiWord" href="/nlab/show/order">ordered</a> by inclusion, or by <a class="existingWikiWord" href="/nlab/show/poset">poset</a> determined byb the relationships between the ‘strata’ as in a <a class="existingWikiWord" href="/nlab/show/poset-stratified+space">poset-stratified space</a>.</p>
+<p>A <em>stratification</em> of a <a class="existingWikiWord" href="/nlab/show/set">set</a> or other object is some kind of decomposition into <em>strata</em> that are often <a class="existingWikiWord" href="/nlab/show/order">ordered</a> by inclusion, or by a <a class="existingWikiWord" href="/nlab/show/poset">poset</a> determining the relationships between the ‘strata’ as in a <a class="existingWikiWord" href="/nlab/show/poset-stratified+space">poset-stratified space</a>.</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -344,14 +344,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 26, 2018 at 03:06:53.
+  Last revised on September 26, 2018 at 05:31:35.
   See the <a href="https://ncatlab.org/nlab/history/stratification" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/stratification" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stratification/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/stratification" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stratification" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/stratification" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stratification/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/stratification" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stratification" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/stratification/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
