--- a/pages/19721.html
+++ b/pages/19721.html
@@ -308,23 +308,26 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>
- 
- * <a href='https://people.sissa.it/~dubrovin/'>Homepage</a></p>
+    <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
+<body>
+<ul>
+<li><a href="https://people.sissa.it/~dubrovin/">Homepage</a></li>
+</ul>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
 
-<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
   <p>
-  Created on September 26, 2018 at 07:32:18.
+  Last revised on September 26, 2018 at 10:35:49.
   See the <a href="https://ncatlab.org/nlab/history/Boris Dubrovin" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Boris+Dubrovin" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Boris+Dubrovin" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Boris+Dubrovin/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Boris+Dubrovin" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Boris+Dubrovin" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Boris Dubrovin/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
