--- a/pages/10702.html
+++ b/pages/10702.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8645/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8645/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -686,6 +686,10 @@ margin-left: 0em;
 </ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
+<ul>
+<li><a href='#general'>General</a></li>
+<li><a href='#ReferencesInRepresentationTheory'>In representation theory</a></li>
+</ul>
 </ul>
 </div>
 
@@ -897,6 +901,8 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
+<h3 id="general">General</h3>
+
 <ul>
 <li id="Wirthmuller12">
 <p><a class="existingWikiWord" href="/nlab/show/Klaus+Wirthm%C3%BCller">Klaus Wirthmüller</a>, section 11 of <em>Vector bundles and K-theory</em>, 2012 (<a href="ftp://www.mathematik.uni-kl.de/pub/scripts/wirthm/Top/vbkt_skript.pdf">pdf</a>)</p>
@@ -914,20 +920,46 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Jacob+Lurie">Jacob Lurie</a>, remark 2 in: <em><a class="existingWikiWord" href="/nlab/show/Chromatic+Homotopy+Theory">Chromatic Homotopy Theory</a></em>, Lecture series 2010, Lecture 35 <em>The image of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>J</mi></mrow><annotation encoding="application/x-tex">J</annotation></semantics></math></em> (<a href="http://www.math.harvard.edu/~lurie/252xnotes/Lecture35.pdf">pdf</a>)</p>
 </li>
 </ul>
+
+<h3 id="ReferencesInRepresentationTheory">In representation theory</h3>
+
+<p>Adams operations on the <a class="existingWikiWord" href="/nlab/show/representation+ring">representation ring</a> (the <a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> of the point) are discussed in</p>
+
+<ul>
+<li id="tomDieck79">
+<p><a class="existingWikiWord" href="/nlab/show/Tammo+tom+Dieck">Tammo tom Dieck</a>, section 3.5 of <em><a class="existingWikiWord" href="/nlab/show/Transformation+Groups+and+Representation+Theory">Transformation Groups and Representation Theory</a></em>, Lecture Notes in Mathematics 766 Springer 1979</p>
+</li>
+
+<li>
+<p>Robert Boltje, <em>A characterization of Adams operations on representation rings</em>, 2001 (<a href="https://boltje.math.ucsc.edu/publications/p01v.pdf">pdf</a>)</p>
+</li>
+
+<li id="tomDieck09">
+<p><a class="existingWikiWord" href="/nlab/show/Tammo+tom+Dieck">Tammo tom Dieck</a>, section 6.2 of <em>Representation theory</em>, 2009 (<a href="http://www.uni-math.gwdg.de/tammo/rep.pdf">pdf</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Michael+Boardman">Michael Boardman</a>, <em>Adams operations on Group representations</em>, 2007 (<a href="http://www.math.jhu.edu/~jmb/note/adamrept.pdf">pdf</a>)</p>
+</li>
+
+<li>
+<p>Ehud Meir, Markus Szymik, <em>Adams operations and symmetries of representation categories</em> (<a href="https://arxiv.org/abs/1704.03389">arXiv:1704.03389</a>)</p>
+</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September 26, 2018 at 02:20:13.
+  Last revised on September 26, 2018 at 13:45:25.
   See the <a href="https://ncatlab.org/nlab/history/Adams operation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Adams+operation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Adams+operation/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/Adams+operation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Adams+operation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Adams+operation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Adams+operation/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/Adams+operation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Adams+operation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Adams operation/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
