--- a/pages/19668.html
+++ b/pages/19668.html
@@ -339,6 +339,18 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p><a href="https://web.math.rochester.edu/people/faculty/doug/otherpapers/tomDieck-lambda.pdf">Chapter 3: Lambda rings</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/lambda+ring">lambda ring</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Adams+operation">Adams operation</a></p>
+</li>
+</ul>
+
 <p>Chapter 7: Equivariant homology and cohomolgy</p>
 
 <ul>
@@ -374,14 +386,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 26, 2018 at 07:05:49.
+  Last revised on September 26, 2018 at 13:40:23.
   See the <a href="https://ncatlab.org/nlab/history/Transformation Groups and Representation Theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Transformation+Groups+and+Representation+Theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Transformation+Groups+and+Representation+Theory/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Transformation+Groups+and+Representation+Theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Transformation+Groups+and+Representation+Theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Transformation+Groups+and+Representation+Theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Transformation+Groups+and+Representation+Theory/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Transformation+Groups+and+Representation+Theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Transformation+Groups+and+Representation+Theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Transformation Groups and Representation Theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
