--- a/pages/19719.html
+++ b/pages/19719.html
@@ -346,6 +346,14 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Peter+LeFanu+Lumsdaine">Peter LeFanu Lumsdaine</a></li>
 
 <li><span class="newWikiWord">Ali Caglayan<a href="/nlab/new/Ali+Caglayan">?</a></span></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/Steve+Awodey">Steve Awodey</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/Andre+Joyal">Andre Joyal</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/Benedikt+Ahrens">Benedikt Ahrens</a></li>
+
+<li><span class="newWikiWord">Jasper Hugunin<a href="/nlab/new/Jasper+Hugunin">?</a></span></li>
 </ul>
 
 <h2 id="plans">Plans</h2>
@@ -357,14 +365,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on September 25, 2018 at 12:21:42.
+  Last revised on September 26, 2018 at 19:42:20.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Initiality+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
