--- a/pages/19722.html
+++ b/pages/19722.html
@@ -313,20 +313,20 @@ margin-left: 0em;
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
 <p>I am a mathematician at the <a href="http://www.hri.res.in/">Harish-Chandra Research Institute</a> in Allahabad, India. My primary interest in mathematics has been algebraic geometry. I am also interested in the univalent foundations of mathematics, especially with reference to the formalisation of mathematics, and am trying to follow the work of the <a href="https://github.com/UniMath/UniMath">UniMath</a> project. As for a Web page about my work, at the moment there is only my <a href="https://mathscinet.ams.org/mathscinet/search/publications.html?pg4=AUCN&amp;s4=raghavendra%2Cn*">MathSciNet list</a>.</p>
-</body></html>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Created on September 26, 2018 at 21:20:50.
+  Last revised on September 26, 2018 at 22:00:53.
   See the <a href="https://ncatlab.org/nlab/history/N. Raghavendra" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/N.+Raghavendra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/N.+Raghavendra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/N.+Raghavendra/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/N.+Raghavendra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/N.+Raghavendra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/N. Raghavendra/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
