--- a/pages/19719.html
+++ b/pages/19719.html
@@ -372,6 +372,12 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Samuel+Mimram">Samuel Mimram</a></li>
 
 <li><a class="existingWikiWord" href="/nlab/show/Paolo+Capriotti">Paolo Capriotti</a></li>
+
+<li><span class="newWikiWord">Rafaël Bocquet<a href="/nlab/new/Rafa%C3%ABl+Bocquet">?</a></span></li>
+
+<li><span class="newWikiWord">András Kovács<a href="/nlab/new/Andr%C3%A1s+Kov%C3%A1cs">?</a></span></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/Favonia">Favonia</a></li>
 </ul>
 
 <h2 id="plans">Plans</h2>
@@ -383,14 +389,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 27, 2018 at 04:52:08.
+  Last revised on September 27, 2018 at 05:48:31.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Initiality+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
