--- a/pages/1224.html
+++ b/pages/1224.html
@@ -578,7 +578,7 @@ margin-left: 0em;
 <p>If <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>F</mi><mo>:</mo><mi>C</mi><mo>→</mo><mi>D</mi></mrow><annotation encoding="application/x-tex">F : C \to D</annotation></semantics></math> is final then <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math> is connected precisely if <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>D</mi></mrow><annotation encoding="application/x-tex">D</annotation></semantics></math> is.</p>
 </div>
 
-<div class="num_prop">
+<div class="num_prop" id="Stability">
 <h6 id="proposition_3">Proposition</h6>
 
 <p>If <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>F</mi> <mn>1</mn></msub></mrow><annotation encoding="application/x-tex">F_1</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>F</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">F_2</annotation></semantics></math> are final, then so is their composite <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>F</mi> <mn>1</mn></msub><mo>∘</mo><msub><mi>F</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">F_1 \circ F_2</annotation></semantics></math>.</p>
@@ -588,10 +588,12 @@ margin-left: 0em;
 <p>If <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>F</mi> <mn>1</mn></msub></mrow><annotation encoding="application/x-tex">F_1</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/full+and+faithful+functor">full and faithful functor</a> and the composite is final, then both functors seperately are final.</p>
 </div>
 
+<p>The first two statements of Proposition <a class="maruku-ref" href="#Stability"></a> in fact follow from the stability properties of orthogonal factorization systems:</p>
+
 <div class="num_prop">
 <h6 id="proposition_4">Proposition</h6>
 
-<p>Final functors and <a href="#http://ncatlab.org/nlab/show/discrete+fibration">discrete fibrations</a> form an <a href="#https://ncatlab.org/nlab/show/orthogonal+factorization+system">orthogonal factorization system</a>.</p>
+<p>Final functors and <a href="http://ncatlab.org/nlab/show/discrete+fibration">discrete fibrations</a> form an <a href="https://ncatlab.org/nlab/show/orthogonal+factorization+system">orthogonal factorization system</a>.</p>
 </div>
 
 <h2 id="generalizations">Generalizations</h2>
@@ -743,7 +745,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 27, 2018 at 08:59:47.
+  Last revised on September 27, 2018 at 09:05:09.
   See the <a href="https://ncatlab.org/nlab/history/final functor" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
