--- a/pages/19725.html
+++ b/pages/19725.html
@@ -504,10 +504,10 @@ margin-left: 0em;
 
 </annotation></semantics></math></div>
 <p>hence for all <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi><mo>∈</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">g \in G</annotation></semantics></math></p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>χ</mi> <mrow><msup><mi>ψ</mi> <mi>n</mi></msup><mo stretchy="false">(</mo><mi>V</mi><mo stretchy="false">)</mo></mrow></msub><mo stretchy="false">(</mo><mi>g</mi><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>=</mo><mspace width="thickmathspace"></mspace><msub><mi>χ</mi> <mi>V</mi></msub><mo stretchy="false">(</mo><msup><mi>g</mi> <mi>k</mi></msup><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>χ</mi> <mrow><msup><mi>ψ</mi> <mi>n</mi></msup><mo stretchy="false">(</mo><mi>V</mi><mo stretchy="false">)</mo></mrow></msub><mo stretchy="false">(</mo><mi>g</mi><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>=</mo><mspace width="thickmathspace"></mspace><msub><mi>χ</mi> <mi>V</mi></msub><mo stretchy="false">(</mo><msup><mi>g</mi> <mi>n</mi></msup><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
   \chi_{\psi^n(V)}(g)
   \;=\;
-  \chi_V( g^k )
+  \chi_V( g^n )
 
 </annotation></semantics></math></div></div>
 
@@ -706,14 +706,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 27, 2018 at 08:24:27.
+  Last revised on September 27, 2018 at 09:28:29.
   See the <a href="https://ncatlab.org/nlab/history/Schur index" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Schur+index" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Schur+index/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Schur+index" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Schur+index" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Schur+index" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Schur+index/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Schur+index" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Schur+index" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Schur index/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
