--- a/pages/6393.html
+++ b/pages/6393.html
@@ -1388,6 +1388,12 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Paul+Howe">Paul Howe</a>, <em>Super Weyl transformations in two dimensions</em> J. Phys. 12 (1979) 393.</li>
 </ul>
 
+<p>A decent account is in</p>
+
+<ul>
+<li id="Majer">Imre Majer, <em>Superstrings</em> (<a href="http://edu.itp.phys.ethz.ch/fs13/cft/SuperS2_Majer.pdf">pdf</a>, <a class="existingWikiWord" href="/nlab/files/MajerSuperstrings.pdf" title="pdf">pdf</a>)</li>
+</ul>
+
 <p>A review of the history of these developments is in</p>
 
 <ul>
@@ -1415,14 +1421,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 25, 2018 at 11:04:31.
+  Last revised on September 27, 2018 at 14:22:01.
   See the <a href="https://ncatlab.org/nlab/history/spinning string" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/spinning+string" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/spinning+string/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/spinning+string" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/spinning+string" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/spinning+string" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/spinning+string/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/spinning+string" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/spinning+string" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/spinning string/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
