--- a/pages/176.html
+++ b/pages/176.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -315,7 +315,447 @@ margin-left: 0em;
 <div class="toc clickDown" tabindex="0">
 <h3 id="context">Context</h3>
 
-<h4 id="quantum_field_theory">Quantum field theory</h4>
+<h4 id="algebraic_quantum_field_theory">Algebraic Quantum Field Theory</h4>
+
+<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/algebraic+quantum+field+theory">algebraic quantum field theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/perturbative+AQFT">perturbative</a>, <a class="existingWikiWord" href="/nlab/show/AQFT+on+curved+spacetime">on curved spacetimes</a>, <a class="existingWikiWord" href="/nlab/show/homotopical+algebraic+quantum+field+theory">homotopical</a>)</p><p><a class="existingWikiWord" href="/nlab/show/A+first+idea+of+quantum+field+theory">Introduction</a></p><h2 id="concepts">Concepts</h2><p><strong><a class="existingWikiWord" href="/nlab/show/field+theory">field theory</a></strong>: <a class="existingWikiWord" href="/nlab/show/classical+field+theory">classical</a>, <a class="existingWikiWord" href="/nlab/show/prequantum+field+theory">pre-quantum</a>, <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum</a>, <a class="existingWikiWord" href="/nlab/show/perturbative+quantum+field+theory">perturbative quantum</a></p><p><strong><a class="existingWikiWord" href="/nlab/show/Lagrangian+field+theory">Lagrangian field theory</a></strong></p><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field (physics)</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/field+bundle">field bundle</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/field+history">field history</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/space+of+field+histories">space of field histories</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Lagrangian+density">Lagrangian density</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Euler-Lagrange+form">Euler-Lagrange form</a>, <a class="existingWikiWord" href="/nlab/show/presymplectic+current">presymplectic current</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Euler-Lagrange+equations">Euler-Lagrange</a><a class="existingWikiWord" href="/nlab/show/equations+of+motion">equations of motion</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/locally+variational+field+theory">locally variational field theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/covariant+phase+space">covariant phase space</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Peierls-Poisson+bracket">Peierls-Poisson bracket</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/advanced+and+retarded+propagator">advanced and retarded propagator</a>,</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/causal+propagator">causal propagator</a></p>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul><p><strong><a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/geometric+quantization">geometric quantization</a><a class="existingWikiWord" href="/nlab/show/geometric+quantization+of+symplectic+groupoids">of symplectic groupoids</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/algebraic+deformation+quantization">algebraic deformation quantization</a>, <a class="existingWikiWord" href="/nlab/show/star+algebra">star algebra</a></p>
+</li>
+</ul><p><strong><a class="existingWikiWord" href="/nlab/show/quantum+mechanical+system">quantum mechanical system</a></strong>, <strong><a class="existingWikiWord" href="/nlab/show/quantum+probability">quantum probability</a></strong></p><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/subsystem">subsystem</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/observables">observables</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/field+observables">field observables</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/local+observables">local observables</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/polynomial+observables">polynomial observables</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/microcausal+observables">microcausal observables</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/operator+algebra">operator algebra</a>, <a class="existingWikiWord" href="/nlab/show/C%2A-algebra">C*-algebra</a>, <a class="existingWikiWord" href="/nlab/show/von+Neumann+algebra">von Neumann algebra</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/local+net+of+observables">local net of observables</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/causal+locality">causal locality</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Haag-Kastler+axioms">Haag-Kastler axioms</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Wightman+axioms">Wightman axioms</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/field+net">field net</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/conformal+net">conformal net</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/state+on+a+star-algebra">state on a star-algebra</a>, <a class="existingWikiWord" href="/nlab/show/expectation+value">expectation value</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/pure+state">pure state</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/wave+function">wave function</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/collapse+of+the+wave+function">collapse of the wave function</a>/<a class="existingWikiWord" href="/nlab/show/conditional+expectation+value">conditional expectation value</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/mixed+state">mixed state</a>, <a class="existingWikiWord" href="/nlab/show/density+matrix">density matrix</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/space+of+quantum+states">space of quantum states</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/vacuum+state">vacuum state</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/quasi-free+state">quasi-free state</a>,</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Hadamard+state">Hadamard state</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Wightman+propagator">Wightman propagator</a></p>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/picture+of+quantum+mechanics">picture of quantum mechanics</a></p>
+</li>
+</ul><p><strong><a class="existingWikiWord" href="/nlab/show/free+field">free field</a> <a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/star+algebra">star algebra</a>, <a class="existingWikiWord" href="/nlab/show/Moyal+deformation+quantization">Moyal deformation quantization</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Wick+algebra">Wick algebra</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/canonical+commutation+relations">canonical commutation relations</a>, <a class="existingWikiWord" href="/nlab/show/Weyl+relations">Weyl relations</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/normal+ordered+product">normal ordered product</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Fock+space">Fock space</a></p>
+</li>
+</ul><p><strong><a class="existingWikiWord" href="/nlab/show/gauge+theories">gauge theories</a></strong></p><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/gauge+symmetry">gauge symmetry</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/BRST+complex">BRST complex</a>, <a class="existingWikiWord" href="/nlab/show/BV-BRST+formalism">BV-BRST formalism</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/local+BV-BRST+complex">local BV-BRST complex</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/BV-operator">BV-operator</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/quantum+master+equation">quantum master equation</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/master+Ward+identity">master Ward identity</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/gauge+anomaly">gauge anomaly</a></p>
+</li>
+</ul><p><strong><a class="existingWikiWord" href="/nlab/show/interacting+field+theory">interacting field</a> <a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/causal+perturbation+theory">causal perturbation theory</a>, <a class="existingWikiWord" href="/nlab/show/perturbative+AQFT">perturbative AQFT</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/interaction">interaction</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/S-matrix">S-matrix</a>, <a class="existingWikiWord" href="/nlab/show/scattering+amplitude">scattering amplitude</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/causal+additivity">causal additivity</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/time-ordered+product">time-ordered product</a>, <a class="existingWikiWord" href="/nlab/show/Feynman+propagator">Feynman propagator</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Feynman+diagram">Feynman diagram</a>, <a class="existingWikiWord" href="/nlab/show/Feynman+perturbation+series">Feynman perturbation series</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/effective+action">effective action</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/vacuum+stability">vacuum stability</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/interacting+field+algebra">interacting field algebra</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Bogoliubov%27s+formula">Bogoliubov's formula</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/quantum+M%C3%B8ller+operator">quantum Møller operator</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/adiabatic+limit">adiabatic limit</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/infrared+divergence">infrared divergence</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/interacting+vacuum">interacting vacuum</a></p>
+</li>
+</ul>
+</li>
+</ul><p><strong><a class="existingWikiWord" href="/nlab/show/renormalization">renormalization</a></strong></p><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/renormalization+scheme">("re-")normalization scheme</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/extension+of+distributions">extension of distributions</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/renormalization+condition">("re"-)normalization condition</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/quantum+anomaly">quantum anomaly</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/renormalization+group">renormalization group</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/interaction+vertex+redefinition">interaction vertex redefinition</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/St%C3%BCckelberg-Petermann+renormalization+group">Stückelberg-Petermann renormalization group</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/renormalization+group+flow">renormalization group flow</a>/<a class="existingWikiWord" href="/nlab/show/running+coupling+constants">running coupling constants</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/effective+quantum+field+theory">effective quantum field theory</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/UV+cutoff">UV cutoff</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/counterterms">counterterms</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/relative+effective+action">relative effective action</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Wilsonian+RG">Wilsonian RG</a>, <a class="existingWikiWord" href="/nlab/show/Polchinski+flow+equation">Polchinski flow equation</a></p>
+</li>
+</ul>
+</li>
+</ul><h2 id="Theorems">Theorems</h2><h3 id="states_and_observables">States and observables</h3><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/order-theoretic+structure+in+quantum+mechanics">order-theoretic structure in quantum mechanics</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Alfsen-Shultz+theorem">Alfsen-Shultz theorem</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Harding-D%C3%B6ring-Hamhalter+theorem">Harding-Döring-Hamhalter theorem</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Kochen-Specker+theorem">Kochen-Specker theorem</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Bell%27s+theorem">Bell's theorem</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Fell%27s+theorem">Fell's theorem</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Gleason%27s+theorem">Gleason's theorem</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Wigner+theorem">Wigner theorem</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Bub-Clifton+theorem">Bub-Clifton theorem</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Kadison-Singer+problem">Kadison-Singer problem</a></p>
+</li>
+</ul><h3 id="operator_algebra">Operator algebra</h3><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Wick%27s+theorem">Wick's theorem</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/GNS+construction">GNS construction</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/cyclic+vector">cyclic vector</a>, <a class="existingWikiWord" href="/nlab/show/separating+vector">separating vector</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/modular+theory">modular theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Fell%27s+theorem">Fell's theorem</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Stone-von+Neumann+theorem">Stone-von Neumann theorem</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Haag%27s+theorem">Haag's theorem</a></p>
+</li>
+</ul><h3 id="local_qft">Local QFT</h3><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Reeh-Schlieder+theorem">Reeh-Schlieder theorem</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Bisognano-Wichmann+theorem">Bisognano-Wichmann theorem</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/PCT+theorem">PCT theorem</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/spin-statistics+theorem">spin-statistics theorem</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/DHR+superselection+theory">DHR superselection theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Osterwalder-Schrader+theorem">Osterwalder-Schrader theorem</a> (<a class="existingWikiWord" href="/nlab/show/Wick+rotation">Wick rotation</a>)</p>
+</li>
+</ul><h3 id="perturbative_qft">Perturbative QFT</h3><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Schwinger-Dyson+equation">Schwinger-Dyson equation</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/main+theorem+of+perturbative+renormalization">main theorem of perturbative renormalization</a></p>
+</li>
+</ul></div>
+
+<h4 id="functorial_quantum_field_theory">Functorial Quantum field theory</h4>
 
 <div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/FQFT">functorial quantum field theory</a></strong></p><h2 id="contents">Contents</h2><ul>
 <li>
@@ -1465,6 +1905,10 @@ G_{ij}(z_1, z_2) = C_{ij} (z_1 - z_2)^{-(h_i + h_j)} (\overline{z_1} - \overline
 <li><a class="existingWikiWord" href="/nlab/show/2d+SCFT">2d SCFT</a></li>
 </ul>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/boundary+conformal+field+theory">boundary conformal field theory</a></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
@@ -1481,7 +1925,7 @@ G_{ij}(z_1, z_2) = C_{ij} (z_1 - z_2)^{-(h_i + h_j)} (\overline{z_1} - \overline
 
 <ul>
 <li id="Gawedzki99">
-<p><span class="newWikiWord">Krzysztof Gaw?dzki<a href="/nlab/new/Krzysztof+Gaw%3Fdzki">?</a></span>, <em>Conformal field theory: a case study</em> (<a href="http://arxiv.org/abs/hep-th/9904145">arXiv:hep-th/9904145</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Krzysztof+Gawedzki">Krzysztof Gawedzki</a>, <em>Conformal field theory: a case study</em> (<a href="http://arxiv.org/abs/hep-th/9904145">arXiv:hep-th/9904145</a>)</p>
 </li>
 
 <li>
@@ -1616,14 +2060,14 @@ G_{ij}(z_1, z_2) = C_{ij} (z_1 - z_2)^{-(h_i + h_j)} (\overline{z_1} - \overline
 
 <div class="revisedby">
   <p>
-  Last revised on September 25, 2018 at 11:06:40.
+  Last revised on September 27, 2018 at 14:51:35.
   See the <a href="https://ncatlab.org/nlab/history/conformal field theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/conformal+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/conformal+field+theory/57" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(57 revisions)</span> | <a href="/nlab/show/diff/conformal+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/conformal+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/conformal+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/conformal+field+theory/58" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(58 revisions)</span> | <a href="/nlab/show/diff/conformal+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/conformal+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/conformal field theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
